<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_red"/>
    <SeekBar
        android:id="@+id/sbRed"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_green"/>
    <SeekBar
        android:id="@+id/sbGreen"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_blue"/>
    <SeekBar
        android:id="@+id/sbBlue"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/llColorPreview"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_padding"
        android:layout_marginTop="@dimen/activity_padding"
        android:background="@android:color/black"/>
</LinearLayout>